tests/compilation_tests/export_functions/array_inner_refs.stderr
error: a vector type in arguments of export functions shouldn't contain references
  --> $DIR/array_inner_refs.rs:13:23
   |
13 | pub fn inner_arrays_1(_arg: Vec<&Vec<Vec<Vec<u8>>>>) -> Vec<Vec<Vec<Vec<u8>>>> {
   |                       ^^^^

error: a vector type in arguments of export functions shouldn't contain references
  --> $DIR/array_inner_refs.rs:18:23
   |
18 | pub fn inner_arrays_2(_arg: Vec<Vec<&Vec<Vec<u8>>>>) -> Vec<Vec<Vec<Vec<u8>>>> {
   |                       ^^^^

error: a vector type in arguments of export functions shouldn't contain references
  --> $DIR/array_inner_refs.rs:23:23
   |
23 | pub fn inner_arrays_3(_arg: Vec<Vec<Vec<&Vec<u8>>>>) -> Vec<Vec<Vec<Vec<u8>>>> {
   |                       ^^^^

error: a vector type in arguments of export functions shouldn't contain references
  --> $DIR/array_inner_refs.rs:28:23
   |
28 | pub fn inner_arrays_4(_arg: Vec<Vec<Vec<Vec<&u8>>>>) -> Vec<Vec<Vec<Vec<u8>>>> {
   |                       ^^^^

error: a vector type in arguments of export functions shouldn't contain references
  --> $DIR/array_inner_refs.rs:33:35
   |
33 | pub fn inner_arrays_5(_arg1: i32, _arg2: Vec<Vec<Vec<&Vec<u8>>>>, _arg3: i32) -> Vec<Vec<Vec<Vec<u8>>>> {
   |                                   ^^^^^
